Testing rating system

--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -18,7 +18,7 @@
                     <div class="column">
                         <div class="ml-4">
                             <div class="mb-2 listing-author">
-                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="profile-img" style="background-image: url('/public/pfp.jpg');"></div>
                                 <div class="ml-2"><b>HideThePain69</b></div>
                             </div>
                             <h1 class='title'>Bishan Nightlife</h1>
@@ -27,30 +27,29 @@
                         </div>
                     </div>
                     <div class="column">
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="box listing-img" style="background-image: url('/public/places/bishan.jpg');"></div>
                     </div>
                 </div>
                 <form class="form-horizontal">
                     <fieldset>
-                        <div class="field is-grouped">
-                            <div class="control">
-                                <input type="radio" name="rate" id="star5" value="5" class="rate">
-                                <label for="star5"><span><i class="far fa-star fa-6x"></i></span></label>
+                        <div class="field is-grouped is-grouped-centered">
+                            <div class="rating control">
+                                <input type="radio" name="rate" id="star5" value="5" style="display: none;">
+                                <label for="star5"></label>
 
-                                <input type="radio" name="rate" id="star4" value="4" class="rate">
-                                <label for="star4"><span><i class="far fa-star fa-6x"></i></span></label>
-
-
-                                <input type="radio" name="rate" id="star3" value="3" class="rate">
-                                <label for="star3"><span><i class="far fa-star fa-6x"></i></span></label>
+                                <input type="radio" name="rate" id="star4" value="4" style="display: none;">
+                                <label for="star4"></label>
 
 
-                                <input type="radio" name="rate" id="star2" value="2" class="rate">
-                                <label for="star2"><span><i class="far fa-star fa-6x"></i></span></label>
+                                <input type="radio" name="rate" id="star3" value="3" style="display: none;">
+                                <label for="star3"></label>
 
-                                <input type="radio" name="rate" id="star1" value="1" class="rate">
-                                <label for="star1"><span><i class="far fa-star fa-6x"></i></span></label>
 
+                                <input type="radio" name="rate" id="star2" value="2" style="display: none;">
+                                <label for="star2"></label>
+
+                                <input type="radio" name="rate" id="star1" value="1" style="display: none;">
+                                <label for="star1"></label>
                             </div>
                         </div>
 
