Attempt to fix graphs (untested becuase im gay)

--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"
         integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw=="
         crossorigin="anonymous"></script>
@@ -32,7 +35,8 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="./dashboard">Tourister&nbsp;<span class="has-text-weight-normal has-text-primary">for Tour Guides</span></a>
+                <a class="navbar-item has-text-weight-bold" href="./dashboard">Tourister&nbsp;<span
+                        class="has-text-weight-normal has-text-primary">for Tour Guides</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
@@ -53,13 +57,16 @@
 
 
                 <div class="navbar-end">
-                    <a class="navbar-item has-text-danger-dark has-tooltip-arrow has-tooltip-bottom" data-tooltip="Return to the Marketplace" href="{{url_for('home')}}">
+                    <a class="navbar-item has-text-danger-dark has-tooltip-arrow has-tooltip-bottom"
+                        data-tooltip="Return to the Marketplace" href="{{url_for('home')}}">
                         <i class="fas fa-arrow-left"></i>&ensp;Buyer mode
                     </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="New listing" href="{{url_for('makelisting')}}">
+                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="New listing"
+                        href="{{url_for('makelisting')}}">
                         <i class="fas fa-plus"></i>
                     </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your business" href="{{url_for('all_businesses')}}">
+                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your business"
+                        href="{{url_for('all_businesses')}}">
                         <i class="fas fa-briefcase"></i>
                     </a>
                     <div class="navbar-item has-dropdown is-hoverable">
