--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -116,7 +116,7 @@
                         Expenses
                     </p>
                     <div class="panel-block">
-                        <canvas id="expensesChart" width="400" height="400"></canvas>
+                        <canvas id="expensesChart" width="400" height="150"></canvas>
                     </div>
                 </div>
             </div>
@@ -126,11 +126,12 @@
                         Refunds
                     </p>
                     <div class="panel-block">
-                        <canvas id="refundChart" width="400" height="400"></canvas>
+                        <canvas id="refundChart" width="400" height="150"></canvas>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<script src="/js/dashboard.js"></script>
 {% endblock %}
