Changes to booking.html

--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -54,7 +54,7 @@
 
         <!--Start: Booking Thumbnails-->
         <ul class="menu-list">
-            <li><a>
+            <li><a href="{{url_for('bookings')}}">
 
                     <!-- START: Horizontal Card -->
         <div class='box p-2'>
