--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -31,22 +31,31 @@
                         </div>
                     </div>
 
-                    <form class="form-horizontal">
-                        <div class="rate">
-                            <input type="radio" id="star5" name="rate" value="5"/>
-                            <label for="star5" title="text">5 stars</label>
-                            <input type="radio" id="star4" name="rate" value="4"/>
-                            <label for="star4" title="text">4 stars</label>
-                            <input type="radio" id="star3" name="rate" value="3"/>
-                            <label for="star3" title="text">3 stars</label>
-                            <input type="radio" id="star2" name="rate" value="2"/>
-                            <label for="star2" title="text">2 stars</label>
-                            <input type="radio" id="star1" name="rate" value="1"/>
-                            <label for="star1" title="text">1 star</label>
-                        </div>
+                    <form>
                         <fieldset>
                             <div class="field is-grouped is-grouped-centered">
-
+                                <div class="control">
+                                    <label class="radio">
+                                        <input type="radio" name="star" id="star5" value="5">
+                                        <i class="fas fa-star"></i>
+                                    </label>
+                                    <label class="radio">
+                                        <input type="radio" name="star" id="star4" value="4">
+                                        <i class="fas fa-star"></i>
+                                    </label>
+                                    <label class="radio">
+                                        <input type="radio" name="star" id="star3" value="3">
+                                        <i class="fas fa-star"></i>
+                                    </label>
+                                    <label class="radio">
+                                        <input type="radio" name="star" id="star2" value="2">
+                                        <i class="fas fa-star"></i>
+                                    </label>
+                                    <label class="radio">
+                                        <input type="radio" name="star" id="star1" value="1">
+                                        <i class="fas fa-star"></i>
+                                    </label>
+                                </div>
                             </div>
 
                             <div class="field">
