--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -1,46 +1,38 @@
 .profile-img {
     height: 2rem;
     width: 2rem;
-    border: 1px rgb(12, 12, 12) lid;
+    border: 1px rgb(12, 12, 12);
     border-radius: 99999px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.rate {
-    border: 1px solid #cccccc;
-    float: left;
-    height: 46px;
-    padding: 0 10px;
+.score {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    color: gray;
 }
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
+input[type="radio" i] {
+    display: none;
 }
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
+
+.fa-star:before {
+    color: red;
 }
-.rate:not(:checked) > label:before {
-    content: '★ ';
+
+.radio input {
+    display: none;
+    visibility: hidden;
 }
-.rate > input:checked ~ label {
-    color: #ffc700;
+
+.rating input {
+    display: none;
 }
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
+
+.rating label:hover,
+.rating label:hover ~ label,
+.rating input:checked + label,
+.rating input:checked + label ~ label {
+    color: #ffc107; /* Personal color choice. Lifted from Bootstrap 4 */
 }
