--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -34,26 +34,26 @@
                     <form>
                         <fieldset>
                             <div class="field is-grouped is-grouped-centered">
-                                <div class="control">
-                                    <label class="radio">
+                                <div class="score control">
+                                    <label class="radio" for="star5">
                                         <input type="radio" name="star" id="star5" value="5">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star fa-4x"></i>
                                     </label>
-                                    <label class="radio">
+                                    <label class="radio" for="star4">
                                         <input type="radio" name="star" id="star4" value="4">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star fa-4x"></i>
                                     </label>
-                                    <label class="radio">
+                                    <label class="radio" for="star3">
                                         <input type="radio" name="star" id="star3" value="3">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star fa-4x"></i>
                                     </label>
-                                    <label class="radio">
+                                    <label class="radio" for="star2">
                                         <input type="radio" name="star" id="star2" value="2">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star fa-4x"></i>
                                     </label>
-                                    <label class="radio">
+                                    <label class="radio" for="star1">
                                         <input type="radio" name="star" id="star1" value="1">
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star fa-4x"></i>
                                     </label>
                                 </div>
                             </div>
