--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -35,10 +35,10 @@
                         <fieldset>
                             <div class="field is-grouped is-grouped-centered">
                                 <div class="score control">
-
-                                        <input type="radio" name="star" id="star5" value="5"><label class="radio" for="star5"><i class="fas fa-star fa-4x"></i></label>
-
-
+                                    <label class="radio" for="star5">
+                                        <input type="radio" name="star" id="star5" value="5" class="is-invisible">
+                                        <i class="fas fa-star fa-4x"></i>
+                                    </label>
                                     <label class="radio" for="star4">
                                         <input type="radio" name="star" id="star4" value="4">
                                         <i class="fas fa-star fa-4x"></i>
