--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -4,6 +4,7 @@
 
 {% block scripts %}
 <link rel="stylesheet" href="/css/shop.css">
+<link rel="stylesheet" href="bulma-timeline.min.css">
 <!--<link rel="stylesheet" href="/css/booking.css">-->
 {% endblock %}
 
@@ -14,8 +15,9 @@
 
 <section class="section">
     <div class="container mt-5">
-        <!-- START: Horizontal Card -->
+        <!-- START: Card 1 -->
         <div class='box p-5'>
+            <a href="{{url_for('all_bookings')}}"><i class="fas fa-chevron-left"></i>&ensp;Back to Bookings</a>
             <h1 class="title is-size-1 m-0">Bishan Nightlife</h1>
             <div class="listing-author">
                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
@@ -35,17 +37,75 @@
                 </div>
             </div>
         </div>
-        <!-- END: Horizontal Card -->
+        <!-- END: Card 1 -->
     </div>
+    <!--START: Card 2-->
     <div class='container mt-5'>
         <div class='box p-5'>
             <!--Steps-->
-            <img src="../../public/imgs/steps_placeholder.PNG">
-            <!---End steps-->
+            <img src="..\..\public\imgs\steps_placeholder.PNG">
             <br>
-            <a href="{{url_for('chat')}}"><i class="fas fa-comment-alt"></i>&ensp;View Chat</a>
-            <i class="fas fa-ellipsis-h"></i>
+            <a href="{{url_for('chat')}}" class='has-text-link mr-4'><i class="fas fa-comment-alt"></i>&ensp;View Chat</a>
+            <div class='has-text-right'><i class="fas fa-ellipsis-h"></i></div>
         </div>
     </div>
+    <!--END: Card 2-->
+    <!--START: Card 3-->
+    <div class='container mt-5'>
+        <div class='box p-5'>
+            <h2 class='is-size-3'><b>Itinerary</b></h2>
+            <table class='table'>
+                <tr><td><i class="far fa-calendar"></i>&ensp;<b>Date & Time</b></td>
+                    <td>27/11/20, 6pm</td></tr>
+                <tr><td><i class="fas fa-map-marker-alt"></i>&ensp;<b>Meetup Point</b></td>
+                    <td>Bishan MRT Station</td></tr>
+                <tr><td><i class="fas fa-hourglass-half"></i>&ensp;<b>Duration</b></td>
+                    <td>4 hours</td></tr>
+                <tr><td><i class="fas fa-dollar-sign"></i>&ensp;<b>Cost</b></td>
+                    <td>$120</td></tr>
+            </table>
+            <!--timeline-->
+            <div class="timeline">
+                <header class="timeline-header">
+                  <span class="tag is-medium is-primary">Start</span>
+                </header>
+                <div class="timeline-item">
+                  <div class="timeline-marker"></div>
+                  <div class="timeline-content">
+                    <p class="heading">January 2016</p>
+                    <p>Timeline content - Can include any HTML element</p>
+                  </div>
+                </div>
+                <div class="timeline-item">
+                  <div class="timeline-marker is-image is-32x32">
+                    <img src="https://bulma.io/images/placeholders/32x32.png">
+                  </div>
+                  <div class="timeline-content">
+                    <p class="heading">February 2016</p>
+                    <p>Timeline content - Can include any HTML element</p>
+                  </div>
+                </div>
+                <header class="timeline-header">
+                  <span class="tag is-primary">2017</span>
+                </header>
+                <div class="timeline-item">
+                  <div class="timeline-marker is-icon">
+                    <i class="fa fa-flag"></i>
+                  </div>
+                  <div class="timeline-content">
+                    <p class="heading">March 2017</p>
+                    <p>Timeline content - Can include any HTML element</p>
+                  </div>
+                </div>
+                <div class="timeline-header">
+                  <span class="tag is-medium is-primary">End</span>
+                </div>
+              </div>
+            <!--timeline end-->
+
+            </div>
+        </div>
+
+    <!--END: Card 3-->
 </section>
 {% endblock %}
