--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -36,24 +36,24 @@
                             <div class="field is-grouped is-grouped-centered">
                                 <div class="score control">
                                     <label class="radio" for="star5">
-                                        <input type="radio" name="star" id="star5" value="5" class="is-invisible">
-                                        <i class="fas fa-star fa-4x"></i>
+                                        <input type="radio" name="star" id="star5" value="5" class="is-invisible is-rtl is-warning">
+                                        <i class="fas fa-star fa-4x has-text-grey-light"></i>
                                     </label>
                                     <label class="radio" for="star4">
-                                        <input type="radio" name="star" id="star4" value="4">
-                                        <i class="fas fa-star fa-4x"></i>
+                                        <input type="radio" name="star" id="star4" value="4" class="is-invisible is-rtl is-warning">
+                                        <i class="fas fa-star fa-4x has-text-grey-light"></i>
                                     </label>
                                     <label class="radio" for="star3">
-                                        <input type="radio" name="star" id="star3" value="3">
-                                        <i class="fas fa-star fa-4x"></i>
+                                        <input type="radio" name="star" id="star3" value="3" class="is-invisible is-rtl is-warning">
+                                        <i class="fas fa-star fa-4x has-text-grey-light"></i>
                                     </label>
                                     <label class="radio" for="star2">
-                                        <input type="radio" name="star" id="star2" value="2">
-                                        <i class="fas fa-star fa-4x"></i>
+                                        <input type="radio" name="star" id="star2" value="2" class="is-invisible is-rtl is-warning">
+                                        <i class="fas fa-star fa-4x has-text-grey-light"></i>
                                     </label>
                                     <label class="radio" for="star1">
-                                        <input type="radio" name="star" id="star1" value="1">
-                                        <i class="fas fa-star fa-4x"></i>
+                                        <input type="radio" name="star" id="star1" value="1" class="is-invisible is-rtl is-warning">
+                                        <i class="fas fa-star fa-4x has-text-grey-light"></i>
                                     </label>
                                 </div>
                             </div>
