--- a/templates/tourGuides/listing-success.html
+++ b/templates/tourGuides/listing-success.html
@@ -14,7 +14,12 @@
                     <br><br><br><br><br><br><br><br>  
                     <div class='content has-text-centered'>
                         <h1>Listing was Successful!</h1>
-                    </div>               
+                        <br>
+                        <a class='button is-center is-rounded is-info is-outlined' href="{{url_for('home')}}">
+                            Home
+                        </a>   
+                    </div>
+                                
                 </div>
             </div>
         </div>
